Sonar cleanup * Local variables should not shadow class fields java:S1117 * Methods should not have identical implementations java:S4144 * "Stream.toList()" method should be used instead of "collectors"   when unmodifiable list needed java:S6204 * Restricted Identifiers should not be used as Identifiers java:S6213